Continue work.